<resources>
    <string name="app_name">FurHeal</string>
    <string name="btnSignIn">Sign In</string>
    <string name="btnSignOut">Sign Out</string>
    <string name="txtEmail">Email</string>
    <string name="txtUser">User</string>
    <string name="weight">Weight</string>
    <string name="weight_log">Weight Log</string>
    <string name="add_weight">Add Weight</string>
    <string name="export_weight">Export Weight History</string>
    <string-array name="weight_options_array">
        <item>pounds</item>
        <item>kilograms</item>
    </string-array>
    <string name="date_picker_title">Date of weighing:</string>
    <string-array name="pet_options_array">
        <item>New Pet</item>
    </string-array>
    <string name="food">Food</string>
    <string name="food_log">Food Log</string>
    <string name="add_food">Add Food</string>
    <string name="meds">Medications</string>
    <string name="meds_log">Medication Log</string>
    <string name="add_med">Add Medication</string>
    <string name="symptoms">Symptoms</string>
    <string name="symptom_log">Symptom Log</string>
    <string name="add_symptom">Add Symptom</string>
    <string-array name="med_options_array">
        <item>ML</item>
        <item>MG</item>
        <item>Pill(s)</item>
        <item>Drop(s)</item>
    </string-array>
    <string-array name="severity_array">
        <item>Mild</item>
        <item>Moderate</item>
        <item>Severe</item>
    </string-array>
    <string name="profile">Profile</string>
</resources>
